--- a/ClientSideApp/app/src/main/res/layout/activity_main.xml
+++ b/ClientSideApp/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"/>
 
-        <RelativeLayout
+        <!--<RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -76,7 +76,7 @@
 
             </LinearLayout>
 
-        </RelativeLayout>
+        </RelativeLayout>-->
 
 
         <com.google.android.material.tabs.TabLayout
