--- a/ClientSideApp/app/src/main/res/layout/activity_main.xml
+++ b/ClientSideApp/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,6 @@
         android:layout_margin="@dimen/fab_margin"
         android:scaleType="center"
         app:backgroundTint="@color/white"
-        app:srcCompat="@drawable/feather" />
+        app:srcCompat="@drawable/plus" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
