--- a/ClientSideApp/app/src/main/res/layout/fragment_statuses.xml
+++ b/ClientSideApp/app/src/main/res/layout/fragment_statuses.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".client.view.main.tabs.StatusListFragment">
+    tools:context=".client.view.main.tabs.SaleListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/statusListRecyclerView"
