--- a/ClientSideApp/app/src/main/res/layout/sale_row.xml
+++ b/ClientSideApp/app/src/main/res/layout/sale_row.xml
@@ -35,5 +35,19 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/authorInfo" />
 
+    <Button
+        android:id="@+id/edit_sale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/delete_sale"
+        android:text="Edit" />
+
+    <Button
+        android:id="@+id/delete_sale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/statusContent"
+        android:text="Delete" />
+
 </RelativeLayout>
 
